welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:76: error: Unmatched closing brace '}' ignored here
} 
^FlowerCase:78: error: eof expected but '}' found.
}
^